--- a/contracts/package.json
+++ b/contracts/package.json
@@ -29,6 +29,7 @@
     "lint-staged": "^10.4.0"
   },
   "dependencies": {
+    "@chainlink/contracts": "^0.0.10",
     "@openzeppelin/contracts": "^3.2.0",
     "eslint": "^7.9.0",
     "eslint-config-prettier": "^6.11.0",
