--- a/contracts/package.json
+++ b/contracts/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "compile": "npx buidler compile",
-    "test": "npx buidler test",
+    "compile": "npx oz compile --solc-version 0.6.12",
+    "test": "yarn run compile && mocha --exit --recursive --timeout 0",
     "lint": "eslint --ext .js,.ts ./; npx solhint **/*.sol",
     "prettier": "prettier --write ."
   },
@@ -19,20 +19,20 @@
   "author": "",
   "license": "AGPL-3.0-only",
   "devDependencies": {
-    "@nomiclabs/buidler": "^1.4.6",
-    "@nomiclabs/buidler-ethers": "^2.0.0",
-    "@nomiclabs/buidler-waffle": "^2.0.0",
     "chai": "^4.2.0",
-    "ethereum-waffle": "^3.0.0",
-    "ethers": "^5.0.0",
     "husky": "^4.3.0",
     "lint-staged": "^10.4.0"
   },
   "dependencies": {
     "@chainlink/contracts": "^0.0.10",
+    "@openzeppelin/cli": "^2.8.2",
     "@openzeppelin/contracts": "^3.2.0",
+    "@openzeppelin/test-environment": "^0.1.5",
+    "@openzeppelin/test-helpers": "^0.5.6",
+    "dotenv": "^8.2.0",
     "eslint": "^7.9.0",
     "eslint-config-prettier": "^6.11.0",
+    "mocha": "^8.1.3",
     "prettier": "^2.1.2",
     "prettier-plugin-solidity": "^1.0.0-alpha.57",
     "solhint": "^3.2.0"
