--- a/contracts/package.json
+++ b/contracts/package.json
@@ -22,6 +22,7 @@
     "@openzeppelin/contracts": "^3.2.0",
     "@openzeppelin/test-environment": "^0.1.5",
     "@openzeppelin/test-helpers": "^0.5.6",
+    "@uniswap/v2-periphery": "^1.1.0-beta.0",
     "dotenv": "^8.2.0",
     "eslint": "^7.9.0",
     "eslint-config-prettier": "^6.11.0",
