--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,11 +15,14 @@
   "dependencies": {
     "@quasar/extras": "^1.0.0",
     "@vue/composition-api": "^0.6.4",
+    "bnc-onboard": "^1.13.1",
     "core-js": "^3.6.5",
+    "ethers": "^5.0.14",
     "quasar": "^1.0.0"
   },
   "devDependencies": {
     "@quasar/app": "^2.0.0",
+    "@quasar/quasar-app-extension-dotenv": "^1.0.5",
     "@types/node": "^10.17.15",
     "@typescript-eslint/eslint-plugin": "^3.3.0",
     "@typescript-eslint/parser": "^3.3.0",
