--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "bnc-onboard": "^1.13.1",
     "core-js": "^3.6.5",
     "ethers": "^5.0.14",
+    "plotly.js-dist": "^1.55.2",
     "quasar": "^1.0.0"
   },
   "devDependencies": {
