--- a/contracts/package.json
+++ b/contracts/package.json
@@ -29,6 +29,7 @@
     "dotenv": "^8.2.0",
     "eslint": "^7.9.0",
     "eslint-config-prettier": "^6.11.0",
+    "ethers": "^5.0.14",
     "mocha": "^8.1.3",
     "prettier": "^2.1.2",
     "prettier-plugin-solidity": "^1.0.0-alpha.57",
