--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,7 +10,8 @@
     "test": "echo \"No test specified\" && exit 0",
     "prettier": "npx prettier --write .",
     "dev": "npx quasar dev",
-    "build": "npx quasar build"
+    "build": "npx quasar build",
+    "deploy": "yarn build && firebase deploy"
   },
   "dependencies": {
     "@quasar/extras": "^1.0.0",
